<resources>
    <string name="app_name">简幻欢</string>
    <string name="login_title">简幻欢</string>
    <string name="login_subtitle">Minecraft 服务器管理</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="btn_login">登 录</string>
    <string name="nav_server">服务器</string>
    <string name="nav_invite">邀请</string>
    <string name="nav_profile">我的</string>
    <string name="logout">退出登录</string>
    <string name="loading">加载中…</string>
    <string name="no_token">请先登录</string>
    <string name="login_fail">登录失败</string>
    <string name="net_error">网络请求失败，请检查网络</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="empty_server">暂无服务器实例</string>
    <string name="power_start">启动</string>
    <string name="power_stop">停止</string>
    <string name="power_restart">重启</string>
    <string name="power_title">电源操作</string>
    <string name="invite_code_label">我的推荐码</string>
    <string name="invite_link_label">邀请链接</string>
    <string name="copy">复制</string>
    <string name="copied">已复制到剪贴板</string>
    <string name="register_times">邀请注册次数</string>
    <string name="register_verify_times">已实名注册</string>
    <string name="total_income">邀请总收入(积分)</string>
    <string name="pro_income">来自Pro用户收入</string>
    <string name="profile_username">用户名</string>
    <string name="profile_uid">UID</string>
    <string name="profile_points">积分</string>
    <string name="profile_diamond">钻石</string>
    <string name="profile_verified">实名认证</string>
    <string name="raw_data">原始数据</string>
    <string name="confirm_logout">确定退出登录？</string>
    <string name="create_instance">创建实例</string>
    <string name="shop">商店</string>
    <string name="recharge">充值</string>
    <string name="enter_detail">进入详情</string>
</resources>
